--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mocha": "^5.2.0",
     "mochawesome": "^3.0.3",
     "multiple-cucumber-html-reporter": "^1.11.2",
-    "object-hash": "^1.3.1"
+    "object-hash": "^1.3.1",
+    "selenium": "^2.20.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
